# tasks

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
crud_sqlite-master/: README.md  app.py  requirements.txt
crud_sqlite-master/backend/: __init__.py  cache.py  config.py  errors.py  extensions.py  logging_config.py  models.py  routes.py  utils.py  validators.py
crud_sqlite-master/scripts/: build_sidecar.ps1  build_sidecar.sh
crud_sqlite-master/tests/: test_api.py
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.jsx  router.jsx
src/components/: form.css  form.jsx  header.css  header.jsx  table.css  table.jsx
src/components/help/: userGuides.jsx  userguide.css
src/features/tasks/components/: TaskForm.jsx  TaskTable.jsx
src/features/tasks/hooks/: useTasks.js
src/features/tasks/styles/: taskForm.css  taskTable.css
src/page/: crud.jsx  home.jsx
src/pages/Guide/: Guide.css  Guide.jsx
src/pages/Home/: Home.jsx
src/router/: route.jsx
src/shared/components/: Header.css  Header.jsx
src/shared/styles/: globals.css
