[package]
name = "devnaster-tasks"
version = "1.0.0"
description = "DevNaster Tasks Desktop"
authors = ["DevNaster"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-sidecar"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
